# uapg

./: .db_key  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DB_SQL_REFACTOR_PLAN.md  INSTALLATION.md  LICENSE  MIGRATION.md  POOL_MIGRATION_SUMMARY.md  QUICK_START_DB_MANAGER.md  QUICK_START_HISTORY_WITH_CONFIG.md  README.md  README_DB_MANAGER.md  SQL_SYNTAX_FIX.md  db_config.enc  pyproject.toml  pytest.ini  requirements-db-manager.txt  requirements-dev.txt
.cursor/rules/: no-project-bindings.mdc
.github/workflows/: python-publish-init.yml  python-publish.yml
debug/: metrics.json
doc/: INTEGRATION.md
doc/adr/: ADR-001-history-v2-events.md  ADR-002-history-v2-platform.md  ADR-003-variables-v2-opc-aggregation.md  ADR-004-v2-pool-rebind-after-reconnect.md
examples/: advanced_pool_config.py  basic_usage.py  db_manager_usage.py  history_with_encrypted_config.py  main.py  pyproject.toml
src/uapg/: __init__.py  db_manager.py  event_filter.py  history_pgsql.py  history_timescale.py  history_timescale_v2.py  opc_node_id.py  test_event_filter.py
src/uapg/sql/: __init__.py
src/uapg/v2/: __init__.py  backfill_worker.py  event_store.py  events_config.py  filter_planner.py  procedure_gateway.py  schema_registry.py  sql_migrator.py  storage_mode.py
tests/: conftest.py  test_event_store_v2.py  test_events_config.py  test_filter_planner.py  test_history_pgsql.py  test_history_timescale_metrics.py  test_history_timescale_v2_rebind.py  test_opc_node_id.py  test_schema_registry.py  test_sql_migrator.py  test_storage_mode.py
tools/: opcua_metrics_client.py
(+8 files in other folders)
