[project]
name = "uapg"
version = "0.1.0"
description = "OPC UA PostgreSQL History Storage Backend"
readme = "README.md"
authors = [
    { name = "RTS IoT", email = "panfilov@rts-iot.ru" }
]
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["opc-ua", "postgresql", "timescaledb", "history", "industrial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "asyncua>=1.0.0",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/rts-iot/uapg"
Repository = "https://github.com/rts-iot/uapg"
Documentation = "https://github.com/rts-iot/uapg#readme"
Issues = "https://github.com/rts-iot/uapg/issues"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
